# cglib

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  game_number.cpp  game_number.hpp  main.cpp
cglib/: CMakeLists.txt  Makefile
cglib/include/: definitions.hpp  game_concept.hpp  game_number.hpp  game_number_real.hpp  game_number_sets.hpp
cglib/src/: game_number.cpp  game_number_real.cpp  game_number_sets.cpp
include/: GNSpecializations.hpp  GNSpecializations2.hpp  definitions.h  game_number.hpp  game_number_copy.hpp  game_number_repr.hpp  game_number_sets.hpp
src/: game_number.cpp  game_number_copy.cpp  game_number_real.cpp  game_number_sets.cpp  main.cpp
tests/: CMakeLists.txt  Tgame_concept.cpp  Tgame_number_real.cpp  Tgame_number_sets.cpp  a.out  compile_verifier.hpp  main.cpp  test.cpp  test2.cpp
tests/game_concept/: a.out  char.cpp  float.cpp  int.cpp
